visibility-widgets-fixes

--- a/src/app/cdk/side-bar/modals/modal-country/modal-country.component.scss
+++ b/src/app/cdk/side-bar/modals/modal-country/modal-country.component.scss
@@ -48,3 +48,11 @@
     width: 100%;
   }
 }
+
+.delete-button, app-visibility-selector {
+  margin-left: 16px;
+}
+
+.delete-button {
+  margin-top: -3px;
+}
